crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_p_close_standalone_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..5
  HTML_BLOCK@0..5
    HTML_BLOCK_TAG@0..5
      TEXT@0..4 "</p>"
      NEWLINE@4..5 "\n"
