crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_paragraph_demote_div_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..23
  PLAIN@0..8
    TEXT@0..3 "foo"
    NEWLINE@3..4 "\n"
    TEXT@4..7 "bar"
    NEWLINE@7..8 "\n"
  HTML_BLOCK_DIV@8..23
    HTML_BLOCK_TAG@8..23
      TEXT@8..12 "<div"
      TEXT@12..13 ">"
      TEXT@13..22 "baz</div>"
      NEWLINE@22..23 "\n"
