crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_strict_block_multiline_open_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..57
  HTML_BLOCK@0..40
    HTML_BLOCK_TAG@0..6
      TEXT@0..5 "<form"
      NEWLINE@5..6 "\n"
    HTML_BLOCK_CONTENT@6..40
      TEXT@6..20 "  id=\"contact\""
      NEWLINE@20..21 "\n"
      TEXT@21..39 "  class=\"primary\">"
      NEWLINE@39..40 "\n"
  BLANK_LINE@40..41
    BLANK_LINE@40..41 "\n"
  PARAGRAPH@41..48
    TEXT@41..47 "Hello."
    NEWLINE@47..48 "\n"
  BLANK_LINE@48..49
    BLANK_LINE@48..49 "\n"
  HTML_BLOCK@49..57
    HTML_BLOCK_TAG@49..57
      TEXT@49..56 "</form>"
      NEWLINE@56..57 "\n"
