crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_video_matched_pair_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..21
  HTML_BLOCK@0..21
    HTML_BLOCK_TAG@0..8
      TEXT@0..7 "<video>"
      NEWLINE@7..8 "\n"
    HTML_BLOCK_CONTENT@8..21
      TEXT@8..11 "foo"
      NEWLINE@11..12 "\n"
      TEXT@12..20 "</video>"
      NEWLINE@20..21 "\n"
